# bikeraccoon-bots

./: .gitignore  README.md  dashboard.py  pyproject.toml
bot/: cli.py  core.py  plots.py  weather.py
configs/: avelo_quebec.json  bike_share_toronto.json  bixi_montreal.json  lime_vancouver.json  mobi_vancouver.json
templates/: index.html
